fix header z-index

--- a/src/components/organisms/Header/styles.module.scss
+++ b/src/components/organisms/Header/styles.module.scss
@@ -11,6 +11,7 @@
   height: auto;
   background-color: #fff;
   padding: 20px;
+  z-index: 10;
 
   & > * {
     padding-bottom: 20px;
